--- a/README.Rmd
+++ b/README.Rmd
@@ -35,21 +35,11 @@ This is a basic example which shows you how to solve a common problem:
 
 ```{r example}
 library(AmesA)
-## basic example code
+Di<-18.041
+Hi<-34.654
+SAi(Di,Hi)
 ```
 
 Suggested data structure: EASF=estimated airspace fraction; LT=leaf thickness; ET=epidermal thickness; MT=mesophyll thickness; SA=area of chunk of spongey mesophyll tissue; IAS=total area of intracellular airspace within above chunk of spongey mesophyll tissue
 
-```{r cars}
-print(DATASET)
-```
 
-You'll still need to render `README.Rmd` regularly, to keep `README.md` up-to-date. `devtools::build_readme()` is handy for this. You could also use GitHub Actions to re-render `README.Rmd` every time you push. An example workflow can be found here: <https://github.com/r-lib/actions/tree/v1/examples>.
-
-You can also embed plots, for example:
-
-```{r pressure, echo = FALSE}
-plot(pressure)
-```
-
-In that case, don't forget to commit and push the resulting figure files, so they display on GitHub and CRAN.
